--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,17 @@ html {
 body {
   padding: 0;
   margin: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6,p {
+  line-height: 1.25em;
+  margin: 1.5em 0;
+}
+.screenshot {
+  display: block;
+  padding: 10px;
+  max-width: 100%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -30,6 +41,16 @@ body {
 
 .keyboard-controls {
   display: block;
+}
+
+article {
+  padding: 20px;
+  width: 600px;
+}
+
+.codeblock {
+  display: block;
+  padding: 10px;
 }
 
 @media only screen and (max-device-width: 768px) {
