--- a/public/style.css
+++ b/public/style.css
@@ -50,7 +50,10 @@ article {
 
 .codeblock {
   display: block;
-  padding: 10px;
+  margin: 5px 0;
+  padding: 5px 10px;
+  tab-size: 4;
+  background-color: #ddd;
 }
 
 @media only screen and (max-device-width: 768px) {
